<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Booking"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tv_activityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="60sp"
        android:textColor="@color/white"
        android:text="@string/book_a_slot"
        />

    <TextView
        android:id="@+id/tv_promptDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="left"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:text="@string/prompt_select_date"
        />

    <EditText
        android:id="@+id/edt_inputDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        />

    <TextView
        android:id="@+id/tv_promptTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="left"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:text="@string/prompt_select_time"
        />

    <EditText
        android:id="@+id/edt_inputTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        />

    <TextView
        android:id="@+id/tv_promptLectureTheatre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="left"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:text="@string/prompt_select_lecture_theatre"
        />

    <EditText
        android:id="@+id/edt_iinputLectureTheatre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        />

    <TextView
        android:id="@+id/tv_title_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="left"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:text="@string/title_information"
        />

    <TextView
        android:id="@+id/tv_content_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="left"
        android:textSize="16sp"
        android:textColor="@color/white"
        />
</LinearLayout>